--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="row">
 
         <div class="col-md-6 col-12">
-          <div class="new img1"></div>
+          <img src="./img/img1.png" class="posts" alt="new1">
           <div class="mt-3">
             <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
             PROCESS</cite></div>
@@ -77,7 +77,7 @@
         </div>
 
         <div class="col-md-6 col-12">
-          <div class="new img2"></div>
+          <img src="./img/img2.png" class="posts" alt="new1">
           <div class="mt-3">
           <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
           PROCESS</cite></div>
@@ -87,7 +87,7 @@
         </div>
 
         <div class="col-md-6 col-12">
-          <div class="new img3 mt-4"></div>
+          <img src="./img/img3.png" class="posts" alt="new1">
           <div class="mt-3">
             <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
             PROCESS</cite></div>
@@ -97,7 +97,7 @@
         </div>
 
         <div class="col-md-6 col-12">
-          <div class="new img4 mt-4"></div>
+          <img src="./img/img4.png" class="posts" alt="new1">
           <div class="mt-3">
             <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
             PROCESS</cite></div>
@@ -107,7 +107,7 @@
         </div>
 
         <div class="col-md-6 col-12">
-          <div class="new img5 mt-4"></div>
+          <img src="./img/img5.png" class="posts" alt="new1">
           <div class="mt-3">
             <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
             PROCESS</cite></div>
@@ -117,7 +117,7 @@
         </div>
 
         <div class="col-md-6 col-12">
-          <div class="new img6 mt-4"></div>
+          <img src="./img/img6.png" class="posts" alt="new1">
           <div class="mt-3">
             <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
             PROCESS</cite></div>
@@ -127,7 +127,7 @@
         </div>
 
         <div class="col-md-6 col-12">
-          <div class="new img7 mt-4"></div>
+          <img src="./img/img7.png" class="posts" alt="new1">
           <div class="mt-3">
             <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
             PROCESS</cite></div>
@@ -137,7 +137,7 @@
         </div>
 
         <div class="col-md-6 col-12">
-          <div class="new img8 mt-4"></div>
+          <img src="./img/img8.png" class="posts" alt="new1">
           <div class="mt-3">
             <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
             PROCESS</cite></div>
@@ -147,7 +147,7 @@
         </div>
 
         <div class="col-md-6 col-12">
-          <div class="new img9 mt-4"></div>
+          <img src="./img/img9.png" class="posts" alt="new1">
           <div class="mt-3">
             <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
             PROCESS</cite></div>
@@ -157,7 +157,7 @@
         </div>
 
         <div class="col-md-6 col-12">
-          <div class="new img10 mt-4"></div>
+          <img src="./img/img10.png" class="posts" alt="new1">
           <div class="mt-3">
             <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
             PROCESS</cite></div>
@@ -167,7 +167,7 @@
         </div>
 
         <div class="col-md-6 col-12">
-          <div class="new img11 mt-4"></div>
+          <img src="./img/img11.png" class="posts" alt="new1">
           <div class="mt-3">
             <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
             PROCESS</cite></div>
@@ -177,7 +177,7 @@
         </div>
 
         <div class="col-md-6 col-12">
-          <div class="new img12 mt-4"></div>
+          <img src="./img/img12.png" class="posts" alt="new1">
           <div class="mt-3">
             <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
             PROCESS</cite></div>
@@ -187,7 +187,7 @@
         </div>
 
         <div class="col-md-6 col-12">
-          <div class="new img13 mt-4"></div>
+          <img src="./img/img13.png" class="posts" alt="new1">
           <div class="mt-3">
             <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
             PROCESS</cite></div>
@@ -197,7 +197,7 @@
         </div>
 
         <div class="col-md-6 col-12">
-          <div class="new img14 mt-4"></div>
+          <img src="./img/img14.png" class="posts" alt="new1">
           <div class="mt-3">
             <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
             PROCESS</cite></div>
