--- a/post.html
+++ b/post.html
@@ -144,7 +144,7 @@
 
                 <div class="col-md-6 col-12">
         
-                  <div class="new img1"></div>
+                  <img src="./img/img1.png" class="posts">
                   <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
                   PROCESS</cite>
                   <p class="d-inline-flex mt-2 h4"> How to Reinstall WordPress: 5 Different Methods Depending On Your Needs</p>
@@ -156,7 +156,7 @@
                 </div>
         
                 <div class="col-md-6 col-12">
-                  <div class="new img2"></div>
+                    <img src="./img/img2.png" class="posts">
                   <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
                   PROCESS</cite>
                   <p class="d-inline-flex mt-2 h4"> Web page layout 101: website anatomy every designer needs to learn</p>
