--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
+                                                <!-- HEADER OF THE PAGE -->
   <div class="container-xxl">
     <div class="container mt-4">
-
   <header class="sticky-top navbar navbar-expand-lg bg-white"">
         <img src="img/logo.svg" class="topics-hov">
         <a class="navbar-brand" href="index.html"><i class="logo"></i></a>
@@ -46,21 +46,18 @@
       </div>
   </header>
 
-
+                                        <!-- TITLES -->
 
       <div class="h2 mt-6 ">
-
         NEW
         <div class="mt-4 p-2 fs-4">
-
           <p>Our latest web design tips, tricks, insights, and resources, hot off the presses.</p>
         </div>
       </div>
-
       <div class="bg-light  fs-4 mt-5">
         <p>Home-New</p>
       </div>
-
+                                        <!-- ALL THE POSTS -->
       <div class="row">
 
         <div class="col-md-6 col-12">
@@ -71,11 +68,7 @@
           <a href="post.html" class="d-inline-flex mt-2 h4"> How to Reinstall WordPress: 5 Different Methods Depending On Your Needs</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
-
-
-
         </div>
-
         <div class="col-md-6 col-12">
           <img src="./img/img2.png" class="posts" alt="new1">
           <div class="mt-3">
@@ -85,7 +78,6 @@
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
-
         <div class="col-md-6 col-12">
           <img src="./img/img3.png" class="posts" alt="new1">
           <div class="mt-3">
@@ -95,7 +87,6 @@
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
-
         <div class="col-md-6 col-12">
           <img src="./img/img4.png" class="posts" alt="new1">
           <div class="mt-3">
@@ -105,7 +96,6 @@
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
-
         <div class="col-md-6 col-12">
           <img src="./img/img5.png" class="posts" alt="new1">
           <div class="mt-3">
@@ -115,7 +105,6 @@
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
-
         <div class="col-md-6 col-12">
           <img src="./img/img6.png" class="posts" alt="new1">
           <div class="mt-3">
@@ -125,7 +114,6 @@
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
-
         <div class="col-md-6 col-12">
           <img src="./img/img7.png" class="posts" alt="new1">
           <div class="mt-3">
@@ -211,6 +199,7 @@
         </div>
 
         <div class="mt-6  h4 text-dark">
+                                        <!-- ALL THE TOPICS -->
 
           <p>All topics</p>
         </div>
