--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
         <p>Home-New</p>
       </div>
                                         <!-- ALL THE POSTS -->
-      <div class="row">
+      <section class="w-100 bg-light ">
+      <div class="row ">
 
         <div class="col-md-6 col-12">
           <img src="./img/img1.png" class="posts" alt="new1">
@@ -258,7 +259,7 @@
           <button type="submit"  class="rounded-pill bg-danger  mx-auto text-white py-2  " id="basic-addon2">Subscribe</button>
         </div>
         
-
+      </section>
         <footer class="m-4 bg-body mt-6">
           <section class="row">
             <div class="col-6 col-md-4 mt-6">
