--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@
           
         </div>
 
-        <div class="mx-auto text-center rounded-pill">
-          <input type="text" class=" mx-auto rounded-pill px-2 py-2 " placeholder="Your email" aria-label="Your email" >
-          <button type="submit"  class="rounded-pill bg-danger  mx-auto text-white py-2  " id="basic-addon2">Subscribe</button>
-        </div>
+        <form action="#" class="mx-auto text-center rounded-pill">
+          <input type="text" class=" mx-auto rounded-pill px-2 py-2" placeholder="Your email" aria-label="Your email" >
+          <button type="submit" class="rounded-pill bg-danger mx-auto text-white py-2" id="basic-addon2">Subscribe</button>
+        </form>
         
       </section>
         <footer class="m-4 bg-body mt-6">
